--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -50,7 +50,6 @@
 html,
 body {
   background: #383838;
-  color: white;
   font-size: 1.2em;
   font-family: 'VT323', Courier;
   height: 100%;
@@ -199,7 +198,6 @@ label {
 }
 
 input {
-  color: white;
   font-size: 1.2em;
   background: transparent;
   border: 3px solid white;
@@ -214,7 +212,6 @@ input[type=text],
 textarea {
   background: transparent;
   border: 3px solid white;
-  color: white;
   display: block;
   font-family: inherit;
   font-size: 1.2em;
@@ -238,7 +235,6 @@ a.button {
   background: transparent;
   border: 1px solid white;
   clear: both;
-  color: white;
   cursor: hand;
   display: inline-block;
   font-family: 'VT323', Courier;
@@ -317,4 +313,44 @@ a.button:hover {
 .editor-field__label {
   font-size: 1.2em;
   display: block;
+  color: white;
+}
+
+.editorToolBar a {
+  color: #060906;
+}
+
+.editorTextArea {
+  color: white;
+  margin-left: 1.5%;
+  margin-right: 0;
+  height: 100%;
+}
+
+.editorWrapper {
+  border: 1px solid white;
+  width: 70vw;
+  max-height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.newPostBox {
+  margin: 0 auto;
+  height: 70vh;
+}
+
+.container {
+  margin: 5vh auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.titleBox {
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
 }
