--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -112,7 +112,9 @@
 
 .appBar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 0;
 }
 
 .userInfo {
@@ -121,7 +123,7 @@
   color: #B3B5D2;
   font-size: 1.1rem;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 0.3rem;
 }
 
 .authButtons {
